<resources>
    <string name="app_name">My App Portifolio</string>

    <string name="m_main_title">My Nanodegree Apps!</string>

    <string name="m_popular_movies">POPULAR MOVIES</string>
    <string name="m_stock_hawk">STOCK HAWK</string>
    <string name="m_build_it_bigger">BUILD IT BIGGER</string>
    <string name="m_make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="m_go_ubiquitous">GO UBIQUITOUS</string>
    <string name="m_capstone">CAPSTONE</string>
    
    <string name="m_toast_popular_movies">This button will launch my popular movies app!</string>
    <string name="m_toast_stock_hawk">This button will launch my stock hawk app!</string>
    <string name="m_toast_build_it_bigger">This button will launch my build it bigger app!</string>
    <string name="m_toast_make_your_app_material">This button will launch my make your app material app!</string>
    <string name="m_toast_go_ubiquitous">This button will launch my go ubiquitous app!</string>
    <string name="m_toast_capstone">This button will launch my capstone app!</string>
</resources>
