<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.deyvidlira.myappportifolio.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:text="@string/m_main_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <Button
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m_popular_movies"
        android:id="@+id/buttonPopularMovies"
        android:layout_below="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m_stock_hawk"
        android:id="@+id/buttonStockHawk"
        android:layout_below="@+id/buttonPopularMovies"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m_build_it_bigger"
        android:id="@+id/buttonBuildItBigger"
        android:layout_below="@+id/buttonStockHawk"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m_make_your_app_material"
        android:id="@+id/buttonMakeYourAppMaterial"
        android:layout_below="@+id/buttonBuildItBigger"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m_go_ubiquitous"
        android:id="@+id/buttonGoUbiquitous"
        android:layout_below="@+id/buttonMakeYourAppMaterial"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m_capstone"
        android:id="@+id/buttonCapstone"
        android:layout_below="@+id/buttonGoUbiquitous"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

</RelativeLayout>
